<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:id="@+id/tv_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/DescriptionStyle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_add"
            android:id="@+id/iv_profpic"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="view blurred"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profpic"
            android:id="@+id/tv_view"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_view"
            tools:ignore="Autofill"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fullname"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_username"
            tools:ignore="Autofill" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_birthdate"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/insert_date_of_birth"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_fullname"
            tools:ignore="Autofill" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_padress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/insert_address"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_birthdate"
            tools:ignore="Autofill" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_padress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_update"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/update"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/til_padress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_logout"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="150dp"
            android:text="@string/log_out"
            app:layout_constraintTop_toBottomOf="@id/btn_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>